clean up and UI tweaks. limit to three results.

--- a/ga-fewd35-coursework/week_10_student_choice/18_spotify_api/spotify_api_search/css/style.css
+++ b/ga-fewd35-coursework/week_10_student_choice/18_spotify_api/spotify_api_search/css/style.css
@@ -17,19 +17,14 @@
     display: none;
 }
 
-.runtime,
-.rating,
-.genre,
-.released,
-.ratings,
-.votes {
-    display: inline;
-}
-
 .error {
     color: red;
 }
 
 .spacer {
     padding: 10px;
+}
+
+#search-footer {
+    padding-bottom: 40px;
 }
