--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ img {
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 20px;
-    margin-left: 30px;
+    margin-left: 0;
     border: 1px solid #666;
     padding: 4px;
     width: 200px;
@@ -66,4 +66,3 @@ h4 {
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
