--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ img {
     /*height: 200px;*/
 }
 
+img.shadow {
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    -moz-box-shadow: 0 0 5px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.5);
+    box-shadow: 0 0 5px rgba(0,0,0,.5);
+}
+
 dd, dt {
     line-height: 1.5;
 }
