--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ img {
     /*float: right;*/
     margin-top: 0;
     margin-right: 0;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     margin-left: 0;
     border: 1px solid #666;
     /*padding: 4px;*/
@@ -44,6 +44,10 @@ img.shadow {
     -moz-box-shadow: 0 0 5px rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,.5);
     box-shadow: 0 0 5px rgba(0,0,0,.5);
+}
+
+dl {
+    margin-bottom: 10px;
 }
 
 dd, dt {
@@ -82,7 +86,7 @@ h4 {
     background-color: #fff;
     color: #6c6056;
     padding-top: 10px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .footer-row {
