--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@ body {
     background-color: #fff;
     color: #5E2E2D;
     font-family: 'Lato', sans-serif;
+
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.5em;
 }
 
 a {
@@ -35,7 +37,7 @@ img {
     margin-left: 0;
     border: 1px solid #666;
     /*padding: 4px;*/
-    width: 200px;
+    width: 220px;
     /*height: 200px;*/
 }
 
@@ -94,3 +96,74 @@ h4 {
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+
+/* http://stephen.io/mediaqueries/ */
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+
+    body {
+        background-color: red;
+    }
+
+    img {
+        width: 100px;
+    }
+}
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+
+    body {
+        background-color: orange;
+    }
+
+    img {
+        width: 100px;
+    }
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width : 768px) {
+
+    body {
+        font-size: 14px;
+        background-color: yellow;
+    }
+
+    img {
+        width: 220px;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width : 992px) {
+
+    body {
+        font-size: 14px;
+        background-color: green;
+    }
+
+    img {
+        width: 175px;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width : 1200px) {
+
+    body {
+        font-size: 14px;
+        background-color: blue;
+    }
+
+    img {
+        width: 220px;
+    }
+}
+
