--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
     background-color: #fff;
     color: #5E2E2D;
     font-family: 'Lato', sans-serif;
-
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5em;
@@ -31,7 +30,7 @@ a:visited {
 
 img {
     /*float: right;*/
-    margin-top: 0;
+    margin-top: 10px;
     margin-right: 0;
     margin-bottom: 10px;
     margin-left: 0;
@@ -71,7 +70,7 @@ h4 {
 .level-1 {
     background-color: #646269;
     color: #b2b1b4;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
@@ -79,7 +78,7 @@ h4 {
 .level-2 {
     background-color: #a5b08e;
     color: #6d7361;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
@@ -87,7 +86,7 @@ h4 {
 .level-3 {
     background-color: #fff;
     color: #6c6056;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 20px;
 }
 
@@ -129,6 +128,7 @@ and (orientation : landscape) {
 }
 
 /* Small devices (tablets, 768px and up) */
+/* iPad in portrait mode */
 @media (min-width : 768px) {
 
     body {
@@ -142,6 +142,7 @@ and (orientation : landscape) {
 }
 
 /* Medium devices (desktops, 992px and up) */
+/* iPad in landscape mode */
 @media (min-width : 992px) {
 
     body {
